PROJECT(sample)
CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(../src)
AUX_SOURCE_DIRECTORY(. SOURCES)
FILE (GLOB_RECURSE HEADERS "*.[h,hpp]")
ADD_EXECUTABLE(sample ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(sample UsbListener)

SET_TARGET_PROPERTIES(sample PROPERTIES OUTPUT_NAME "sample")
SET_PROPERTY(TARGET sample APPEND PROPERTY LINK_FLAGS /DEBUG)

