PROJECT(UsbListener)
CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

INCLUDE_DIRECTORIES(.)
AUX_SOURCE_DIRECTORY(. SOURCES)
FILE (GLOB HEADERS "*.h" "*.hpp")
ADD_LIBRARY(UsbListener ${SOURCES} ${HEADERS})

SET_TARGET_PROPERTIES(UsbListener PROPERTIES OUTPUT_NAME "UsbListener")
SET_PROPERTY(TARGET UsbListener APPEND PROPERTY LINK_FLAGS /DEBUG)
